...
                    .font(
                        .custom(
                            "CactusClassicalSerif-Regular",
                            size: 40
                        )
                    )
                    .accessibilityIdentifier("infoScreenHeader")

                Image("stick-divider")
                    .padding(.top, -20)
                    .accessibilityHidden(true)

                Text(infoText)
...

                Button("Ghibli API & License Info") {
                    openURL(URL(string: "https://ghibliapi.vercel.app/")!)
                }
                .buttonStyle(ConditionalThemeLinkButtonStyle())
                .padding(.top, 20)
                .accessibilityIdentifier("ghibliAPILinkButton")
            }
            .padding()
            .frame(maxWidth: .infinity, maxHeight: .infinity)
            .foregroundStyle(.cloud)
        }
        .navigationBarTitleDisplayMode(.inline)
...
