...
                    }
                }
                .padding(10)
            }
            .frame(maxWidth: .infinity, maxHeight: .infinity)
            .conditionalTheme()
            .navigationBarTitle("Ghibli Guide", displayMode: .large)
            .toolbar {
                ToolbarItemGroup {
                    NavigationLink(destination: InfoView()) {
                        Image(systemName: "info.circle")
                    }
                    .accessibilityLabel("Info Page")
                    .accessibilityIdentifier("infoScreenButton")
                }
            }
        }
        .conditionalTheme()
        .task {
            await filmListVM.loadData()
...
